# AiSD_Lab1_2024

./: .gitignore  CMakeLists.txt  README.md  time_for_operations.xlsx
app/: main.cpp  time_calculation.cpp
include/: Set.h
src/: BST.cpp  Set.cpp
